objects/vtse__Stand_Deliver_Task__c.object
<CustomObject>
    <fields>
        <fullName>vtse__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vtse__Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stand_Deliver_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Closes_On__c</fullName>
        <label>Closes On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vtse__Community_Id__c</fullName>
        <label>Community Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vtse__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vtse__Last_Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Submission</label>
        <referenceTo>vtse__Stand_Deliver_Submission__c</referenceTo>
        <relationshipLabel>Stand and Deliver Tasks</relationshipLabel>
        <relationshipName>Stand_Deliver_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Stand_Deliver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stand and Deliver</label>
        <referenceTo>vtse__Stand_Deliver__c</referenceTo>
        <relationshipLabel>Stand and Deliver Tasks</relationshipLabel>
        <relationshipName>Stand_Deliver_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vtse__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Stand and Deliver Tasks</relationshipLabel>
        <relationshipName>Stand_Deliver_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stand and Deliver Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SDT-{0}</displayFormat>
        <label>Stand and Deliver Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stand and Deliver Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>